--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,7 +163,7 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/
+ContentBrowserTab1.SelectedPaths=/Game/Sound
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -1117,9 +1117,6 @@ WinDualShock.LastCompileMethod=External
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/World2/long_lantern/Lantern_BP_2.Lantern_BP_2
-OpenAssetsAtExit=/Game/Assets/World2/candle/candle-preset.candle-preset
-OpenAssetsAtExit=/Game/Assets/World2/long_lantern/Lantern_BP.Lantern_BP
 
 [MessageLog]
 LastLogListing=PIE
@@ -3448,6 +3445,19 @@ Lantern_BP_2_C.Input=True
 Lantern_BP_2_C.HLOD=True
 Lantern_BP_2_C.WorldPartition=True
 Lantern_BP_2_C.Events=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Assets/World2/long_lantern/Lantern_BP_2.Lantern_BP_2;
@@ -3472,26 +3482,26 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Mixing_Machine_New.Mixing_Machine_New;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/World2/candle/candle-preset
-MRUItem1=/Game/Assets/World2/long_lantern/Lantern_BP_2
-MRUItem2=/Game/Assets/World2/long_lantern/Lantern_BP
-MRUItem3=/Game/Assets/World2/streetlight/Streetlamp_lantern_BP
-MRUItem4=/Game/ThirdPerson/Blueprints/crates/vomit_crate
-MRUItem5=/Game/ThirdPerson/Blueprints/crates/mochi_crate
-MRUItem6=/Game/ThirdPerson/Blueprints/crates/bone_crate
-MRUItem7=/Game/ThirdPerson/Blueprints/crates/Blood_crate
-MRUItem8=/Game/Assets/Kitchen/Crate/vomit/vomit_crate_mat
-MRUItem9=/Game/Assets/Kitchen/Crate/meat/meat_crate_mat
-MRUItem10=/Game/Assets/Kitchen/Crate/blood/blood_crate_mat
-MRUItem11=/Game/Assets/Kitchen/Crate/Mochi/crate_mochi
-MRUItem12=/Game/Assets/World2/streetlight/streetlight
-MRUItem13=/Game/Assets/World2/streetlight/lambert1
-MRUItem14=/Game/ThirdPerson/Maps/SkyMarket
-MRUItem15=/Game/ThirdPerson/Maps/Level2
-MRUItem16=/Game/UI/Main_Menu/FridgeBP
-MRUItem17=/Game/ThirdPerson/Maps/title_screen
-MRUItem18=/Game/AI/BP_NPC_Water
-MRUItem19=/Game/AI/BP_NPC_Vomit
+MRUItem0=/Game/Sound/Cave-and-Wind
+MRUItem1=/Game/Sound/Forest-Day
+MRUItem2=/Game/ThirdPerson/Maps/SkyMarket
+MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem4=/Game/Sound/Cave_and_Wind
+MRUItem5=/Game/Assets/World2/candle/candle-preset
+MRUItem6=/Game/Assets/World2/long_lantern/Lantern_BP_2
+MRUItem7=/Game/Assets/World2/long_lantern/Lantern_BP
+MRUItem8=/Game/Assets/World2/streetlight/Streetlamp_lantern_BP
+MRUItem9=/Game/ThirdPerson/Blueprints/crates/vomit_crate
+MRUItem10=/Game/ThirdPerson/Blueprints/crates/mochi_crate
+MRUItem11=/Game/ThirdPerson/Blueprints/crates/bone_crate
+MRUItem12=/Game/ThirdPerson/Blueprints/crates/Blood_crate
+MRUItem13=/Game/Assets/Kitchen/Crate/vomit/vomit_crate_mat
+MRUItem14=/Game/Assets/Kitchen/Crate/meat/meat_crate_mat
+MRUItem15=/Game/Assets/Kitchen/Crate/blood/blood_crate_mat
+MRUItem16=/Game/Assets/Kitchen/Crate/Mochi/crate_mochi
+MRUItem17=/Game/Assets/World2/streetlight/streetlight
+MRUItem18=/Game/Assets/World2/streetlight/lambert1
+MRUItem19=/Game/ThirdPerson/Maps/Level2
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_FoodCrate.BP_FoodCrate=1
@@ -3625,6 +3635,9 @@ MRUItem19=/Game/AI/BP_NPC_Vomit
 /Game/Assets/Kitchen/Crate/vomit/vomit_crate_mat.vomit_crate_mat=1
 /Game/Assets/World2/streetlight/Streetlamp_lantern_BP.Streetlamp_lantern_BP=1
 /Game/Assets/World2/long_lantern/Lantern_BP_2.Lantern_BP_2=1
+/Game/ThirdPerson/Maps/SkyMarket.SkyMarket:PersistentLevel.SkyMarket=1
+/Game/Sound/Forest-Day.Forest-Day=1
+/Game/Sound/Cave-and-Wind.Cave-and-Wind=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3682,7 +3695,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ThirdPerson/Maps/title_screen.title_screen", ()),("/Game/ThirdPerson/Maps/SkyMarket.SkyMarket", ()))
 
 [RootWindow]
-ScreenPosition=X=371.000 Y=21.000
+ScreenPosition=X=364.000 Y=0.000
 WindowSize=X=1775.000 Y=1365.000
 InitiallyMaximized=False
 
@@ -3954,9 +3967,9 @@ PreserveScaleRatio=True
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/SkyMarket
-MRUItem1=/Game/ThirdPerson/Maps/Level2
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem2=/Game/ThirdPerson/Maps/title_screen
-MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem3=/Game/ThirdPerson/Maps/Level2
 
 [DetailCustomWidgetExpansion]
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,
@@ -4195,6 +4208,7 @@ WidgetComponent.UserInterface=True
 InputSettings.Bindings=False
 LevelEditorPlaySettings.Multiplayer Options=True
 FbxImportUI.Material=False
+FileMediaSource.File=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
