--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3476,26 +3476,26 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/Mixing_Machine_New.Mixing_Machine_New;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
+MRUItem0=/Game/AI/BP_NPC_Bone
 MRUItem1=/Game/ThirdPerson/Maps/SkyMarket
-MRUItem2=/Game/Assets/World2/MM_Fog_Inst
-MRUItem3=/Game/UI/game_ui/Order_screen
-MRUItem4=/Game/UI/game_ui/overcooking_bar
-MRUItem5=/Game/UI/game_ui/mochi_order
-MRUItem6=/Game/UI/game_ui/melon_order1
-MRUItem7=/Game/UI/game_ui/cooking_bar
-MRUItem8=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon_sludge
-MRUItem9=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_Jelly_Base
-MRUItem11=/Game/ThirdPerson/Blueprints/Mixing_Machine_New
-MRUItem12=/Game/ThirdPerson/Blueprints/Bin
-MRUItem13=/Game/ThirdPerson/Blueprints/fountain_BP
-MRUItem14=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1
-MRUItem15=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem16=/Game/Assets/World2/candle/candle-preset
-MRUItem17=/Game/Assets/World2/long_lantern/Lantern_BP_2
-MRUItem18=/Game/Assets/World2/long_lantern/Lantern_BP
-MRUItem19=/Game/Assets/World2/streetlight/Streetlamp_lantern_BP
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_MixingMachineBowl
+MRUItem3=/Game/Assets/World2/MM_Fog_Inst
+MRUItem4=/Game/UI/game_ui/Order_screen
+MRUItem5=/Game/UI/game_ui/overcooking_bar
+MRUItem6=/Game/UI/game_ui/mochi_order
+MRUItem7=/Game/UI/game_ui/melon_order1
+MRUItem8=/Game/UI/game_ui/cooking_bar
+MRUItem9=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon_sludge
+MRUItem10=/Game/ThirdPerson/Blueprints/Jelly_cooked_children/BP_Jelly_Base_melon
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_Jelly_Base
+MRUItem12=/Game/ThirdPerson/Blueprints/Mixing_Machine_New
+MRUItem13=/Game/ThirdPerson/Blueprints/Bin
+MRUItem14=/Game/ThirdPerson/Blueprints/fountain_BP
+MRUItem15=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1
+MRUItem16=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem17=/Game/Assets/World2/candle/candle-preset
+MRUItem18=/Game/Assets/World2/long_lantern/Lantern_BP_2
+MRUItem19=/Game/Assets/World2/long_lantern/Lantern_BP
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_FoodCrate.BP_FoodCrate=1
@@ -3892,8 +3892,8 @@ BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.
 ShapeComponent=
 BP_NPC_C=
 NPC="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character=
-Pawn=
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
