place on the blood crate
place on the blood crate

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,6 @@ GridEnabled=False
 SnapScaleEnabled=False
 CurrentPosGridSize=3
 CurrentScalingGridSize=1
-RotGridEnabled=False
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -164,7 +163,7 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints/crates
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -1120,6 +1119,9 @@ FontEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Camera.BP_Camera
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/crates/Blood_crate.Blood_crate
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/crates/bone_crate.bone_crate
 
 [MessageLog]
 LastLogListing=PIE
@@ -3706,26 +3708,26 @@ RecentlyPlaced=/Game/Assets/World2/streetlight/streetlight.streetlight;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/crates/vomit_crate.vomit_crate;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/crates/Blood_crate
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_Table
+MRUItem0=/Game/ThirdPerson/Blueprints/crates/bone_crate
+MRUItem1=/Game/ThirdPerson/Blueprints/crates/Blood_crate
 MRUItem2=/Game/ThirdPerson/Maps/SkyMarket
-MRUItem3=/Game/ThirdPerson/Blueprints/crates/plate_crate
-MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem5=/Game/UI/game_ui/Recipe
-MRUItem6=/Game/UI/game_ui/Recipe_level2
-MRUItem7=/Game/UI/fonts/BalsamiqSans-Bold_Font
-MRUItem8=/Game/UI/game_ui/Pause_menu
-MRUItem9=/Game/ThirdPerson/Blueprints/conveyors/conveyor_3_level4
-MRUItem10=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1_level2
-MRUItem11=/Game/ThirdPerson/Blueprints/conveyors/conveyor_2_level3
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem13=/Game/ThirdPerson/Maps/title_screen
-MRUItem14=/Game/ThirdPerson/Blueprints/conveyors/conveyor_3
-MRUItem15=/Game/ThirdPerson/Blueprints/conveyors/conveyor_2
-MRUItem16=/Game/ThirdPerson/Blueprints/BP_Camera
-MRUItem17=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1
-MRUItem18=/Game/UI/game_ui/score
-MRUItem19=/Game/UI/game_ui/vomit_order
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_Camera
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_Table
+MRUItem5=/Game/ThirdPerson/Blueprints/crates/plate_crate
+MRUItem6=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem7=/Game/UI/game_ui/Recipe
+MRUItem8=/Game/UI/game_ui/Recipe_level2
+MRUItem9=/Game/UI/fonts/BalsamiqSans-Bold_Font
+MRUItem10=/Game/UI/game_ui/Pause_menu
+MRUItem11=/Game/ThirdPerson/Blueprints/conveyors/conveyor_3_level4
+MRUItem12=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1_level2
+MRUItem13=/Game/ThirdPerson/Blueprints/conveyors/conveyor_2_level3
+MRUItem14=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem15=/Game/ThirdPerson/Maps/title_screen
+MRUItem16=/Game/ThirdPerson/Blueprints/conveyors/conveyor_3
+MRUItem17=/Game/ThirdPerson/Blueprints/conveyors/conveyor_2
+MRUItem18=/Game/ThirdPerson/Blueprints/conveyors/conveyor_1
+MRUItem19=/Game/UI/game_ui/score
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_FoodCrate.BP_FoodCrate=1
@@ -3935,9 +3937,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/ThirdPerson/Maps/title_screen.title_screen", ()),("/Game/ThirdPerson/Maps/SkyMarket.SkyMarket", ()))
 
 [RootWindow]
-ScreenPosition=X=723.000 Y=20.000
+ScreenPosition=X=145.000 Y=294.000
 WindowSize=X=1775.000 Y=1365.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -4226,7 +4228,7 @@ BrushComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Transfor
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,
 SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,ChildActorComponent.TransformCommon.Transform,
 InstancedFoliageActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,
-BP_Table_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,
+BP_Table_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,ChildActorComponent.TransformCommon.Transform,
 plate_crate_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,
 melon_crate_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,
 mochi_crate_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,
@@ -4375,7 +4377,7 @@ BP_Ingredient_Base_jellymix_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMes
 overcooking_bar_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
 BP_Ingredient_Base_mochi_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,
 BP_Ingredient_Base_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,
-PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,
+PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,CameraComponent.PostProcess.Color Grading,ChildActorComponent.TransformCommon.Transform,
 BP_Camera_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,CameraComponent.PostProcess.Color Grading,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.PickupPlace,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.SelectButton,InputSettings.Bindings.ActionMappings.BackButton,HoloLensTargetSettings.Packaging.LocalizedResources,HoloLensTargetSettings.Packaging.NeutralResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,
 SpringArmComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,
 CameraComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,CameraComponent.PostProcess.Color Grading,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList,
