--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,7 +3,7 @@ ProjectID=368F28FF4B455BEB614D80ACB4B91BED
 ProjectName=Third Person Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-UsePakFile=False
+UsePakFile=True
 bUseIoStore=False
 Build=Always
 IncludePrerequisites=False
